2004-07-14  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngGrammar.cs : When definition is missing, the error message
	  should show what definition is missing.

2004-06-25  Atsushi Enomoto <atsushi@ximian.com>

	* Misc.cs, RelaxngDatatype.cs, RelaxngDatatypeProvider.cs,
	  RelaxngDefaultDatatype.cs, RelaxngException.cs, RelaxngGrammar.cs,
	  RelaxngMergedProvider.cs, RelaxngNameClass.cs, RelaxngPattern.cs,
	  RelaxngPatternType.cs, RelaxngReader.cs, RelaxngValidatingReader.cs,
	  XsdDatatypeProvider.cs : Added/replaced novell license term.

2004-06-21  Atsushi Enomoto <atsushi@ximian.com>

	* Misc.cs,
	  RelaxngPattern.cs,
	  RelaxngReader.cs :
	  Use XmlResolver (or XmlUrlResolver) directly. XmlResolver was
	  incorrectly _used_ before null check. Don't create XmlResolver
	  instance for _every_ pattern object.
	* RelaxngPattern.cs : UnresolvedRef.ExpandRef() should return not
	  try to find target derivative pattern twice. It was the culprit of
	  infinite loop. Removed dirty switches.
	* RelaxngGrammar.cs : code cleanup.

2004-06-17  Atsushi Enomoto <atsushi@ximian.com>

	* Misc.cs, RelaxngGrammar.cs, RelaxngPattern.cs, RelaxngReader.cs :
	  Added XmlResolver property to fix bug #60334.
	  Check incrrect recursion check that caused possible infinite loop.

2004-05-31  Atsushi Enomoto <atsushi@ximian.com>

	* Misc.cs : made Util class internal.
	* RelaxngDatatypeProvider.cs : looks commit was missing.
	* RelaxngException.cs : made one .ctor() internal that accepts
	  RdpPattern.
	* RelaxngNameClas.cs : Names list should not be settable.
	* RelaxngPattern.cs : RelaxngRefPattern class is internal use only.
	* RelaxngPatternType.cs : there is not "Include" pattern.

2004-05-30  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngDatatypeProvider.cs : removed meaningless using alias.
	* RelaxngGrammar.cs : modified ArrayList to RelaxngGrammarContentList.
	  RelaxngMergedProvider.cs : Added #if PNET switch to support non-
	  xmlschema available environment.